syntax = "proto3";

package register_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/sparhokm/slurm/subscription/pkg/subscription_v1;subscription_v1";

service SubscriptionV1 {
  rpc Subscribe(SubscribeIn) returns (google.protobuf.Empty);
}

message SubscribeIn {
  int64 userID = 1;
  string prefix = 2;
  optional int64 filesOwnerID = 3;
}


